# cli-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
claw_demo/: cli.py  main.py
claw_demo/agent/: workflow_runner.py
claw_demo/chat/: engine.py  prompt_builder.py  slash_commands.py
claw_demo/config/: default.yaml  loader.py  schema.py  workspace.py
claw_demo/llm/: client.py  planner.py  schemas.py
claw_demo/memory/: episode.py  extractor.py  grep_retriever.py  manager.py  normalize.py  writer.py
claw_demo/memory/store/: facts.md  profile.md
claw_demo/memory/store/index/: memory_keys.tsv
claw_demo/skills/: dispatcher.py  loader.py  models.py  registry.py  toolbox.py
claw_demo/skills/agents/email/: SKILL.md
claw_demo/skills/agents/file_read/: SKILL.md
claw_demo/skills/agents/file_search/: SKILL.md
claw_demo/skills/agents/summarize/: SKILL.md
claw_demo/skills/agents/time/: SKILL.md
claw_demo/skills/agents/weather/: SKILL.md
claw_demo/skills/builtin/: __init__.py  file_read.py  file_search.py  summarize.py  weather.py
doc/: 系统化开发说明文档.md
tests/: test_chat_flow.py  test_config_validation.py  test_memory_extractor.py  test_memory_retrieval.py  test_skill_dispatch.py  test_workflow_runner.py  test_workspace_config.py
workspace/data/: users.csv
workspace/demo/config/: mock_api.json
workspace/demo/notes/: todo.md
workspace/inbox/: customer_feedback.txt
workspace/safe/: secret_note.txt
